[tool.poetry]
name = "eagerx_examples"
version = "0.1.5"
license = "Apache2.0"
description = "Code examples of EAGERx."
authors = ["Bas van der Heijden <d.s.vanderheijden@tudelft.nl>", "Jelle Luijkx <j.d.luijkx@tudelft.nl>"]
homepage = "https://github.com/eager-dev/eagerx_examples"
repository = "https://github.com/eager-dev/eagerx_examples"
documentation = "https://eagerx.readthedocs.io/en/master/"
include = ["data/with_actions.h5"]

[tool.poetry.dependencies]
python = "^3.6.2"
eagerx = "^0.1.10"
h5py = "^2.9.0"
stable-baselines3 = "1.1.0"
pyglet = "^1.5.21"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pytest-xvfb = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "eagerx_examples/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
